Fix image viewer displaying images too big

--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ p {
   display: block;
   margin: 0 auto;
   width: 100%;
+  max-height: 80vh;
+  object-fit: cover;
   border-radius: 6px;
   overflow: hidden;
 }
